--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>spark-streaming-kafka-0-10_2.12</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.typesafe.play</groupId>
+      <artifactId>play-json_2.12</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
